--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -37,7 +37,7 @@ div.hamburger:hover {
         padding-left: 5px;
         margin-left: 5px;
         margin-top: 5px;
-        z-index: 100;
+        z-index: 1000;
     }
 
     .btn {
